using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public const string ANIM_RUN = "Run";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_DANCE = "Dance";
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_DEAD = "Dead";
    public const string ANIM_WIN = "Win";
    public const string CURRENT_WEAPON = "CurrentWeapon";
    public const string CURRENT_SKIN = "CurrentSkin";
    public const string CURRENT_PANT = "CurrentPant";
    public const string CURRENT_HAIR = "CurrentHair";
    public const string CURRENT_SHIELD = "CurrentShield";
    public const string CURRENT_SET = "CurrentSet";
    public const string CURRENT_LEVEL = "CurrentLevel";
    public const string CURRENT_COIN = "CurrentCoin";
    public const string HAIR = "HAIR";
    public const string PANT = "PANT";
    public const string SET = "SET";
    public const string SHIELD = "SHIELD";
    public const string WEAPON = "WEAPON";











}
